# Kokkos.jl

./: .gitignore  LICENSE  LocalPreferences.toml  Project.toml  README.md
.github/workflows/: CI.yml  CompatHelper.yml  documentation.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/MPI/: index.html
dev/calling_c/: index.html
dev/compilation/: index.html
dev/config_options/: index.html
dev/dynamic_compilation/: index.html
dev/environment/: index.html
dev/inaccessible_views/: index.html
dev/interop/: index.html
dev/library_management/: index.html
dev/search/: index.html
dev/spaces/: index.html
dev/views/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: MPI.md  calling_c.md  compilation.md  config_options.md  dynamic_compilation.md  environment.md  inaccessible_views.md  index.md  interop.md  library_management.md  spaces.md  views.md
ext/: CUDAExt.jl  KokkosAMDGPU.jl  KokkosCUDA.jl  KokkosMPI.jl  MPIExt.jl
lib/kokkos_wrapper/: CMakeLists.txt  README.md  all_targets_generator.cmake  build_parameters.sh  copy.cpp  copy.h  execution_spaces.h  jlcxx_val.h  kokkos_utils.h  kokkos_wrapper.cpp  kokkos_wrapper.h  layouts.cpp  layouts.h  memory_spaces.h  mirrors.cpp  mirrors.h  parameters.h  plan_JIT.txt  printing_utils.h  space_specific_methods.cpp  spaces.cpp  spaces.h  subviews.cpp  subviews.h  utils.h  views.cpp  views.h
lib/kokkos_wrapper/sub_libraries/: CMakeLists.txt  copy.cpp  mirrors.cpp  subviews.cpp  views.cpp  views.h
previews/PR1/: index.html  search_index.js
previews/PR1/calling_c/: index.html
previews/PR1/compilation/: index.html
previews/PR1/config_options/: index.html
previews/PR1/environment/: index.html
previews/PR1/library_management/: index.html
previews/PR1/search/: index.html
previews/PR1/spaces/: index.html
previews/PR1/views/: index.html
previews/PR10/: index.html
previews/PR10/MPI/: index.html
previews/PR10/calling_c/: index.html
previews/PR10/compilation/: index.html
previews/PR10/config_options/: index.html
previews/PR10/environment/: index.html
previews/PR10/inaccessible_views/: index.html
previews/PR10/library_management/: index.html
previews/PR10/search/: index.html
previews/PR10/spaces/: index.html
previews/PR10/views/: index.html
previews/PR11/: index.html  search_index.js
previews/PR11/MPI/: index.html
previews/PR11/calling_c/: index.html
previews/PR11/compilation/: index.html
previews/PR11/config_options/: index.html
previews/PR11/environment/: index.html
previews/PR11/inaccessible_views/: index.html
previews/PR11/library_management/: index.html
previews/PR11/search/: index.html
previews/PR11/spaces/: index.html
previews/PR11/views/: index.html
previews/PR12/: index.html
previews/PR12/MPI/: index.html
previews/PR12/calling_c/: index.html
previews/PR12/compilation/: index.html
previews/PR12/config_options/: index.html
previews/PR12/environment/: index.html
previews/PR12/inaccessible_views/: index.html
previews/PR12/library_management/: index.html
previews/PR12/search/: index.html
previews/PR12/spaces/: index.html
previews/PR12/views/: index.html
previews/PR13/: index.html  search_index.js
previews/PR13/MPI/: index.html
previews/PR13/calling_c/: index.html
previews/PR13/compilation/: index.html
previews/PR13/config_options/: index.html
previews/PR13/environment/: index.html
previews/PR13/inaccessible_views/: index.html
previews/PR13/interop/: index.html
previews/PR13/library_management/: index.html
previews/PR13/search/: index.html
previews/PR13/spaces/: index.html
previews/PR13/views/: index.html
previews/PR15/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR15/MPI/: index.html
previews/PR15/calling_c/: index.html
previews/PR15/compilation/: index.html
previews/PR15/config_options/: index.html
previews/PR15/dynamic_compilation/: index.html
previews/PR15/environment/: index.html
previews/PR15/inaccessible_views/: index.html
previews/PR15/interop/: index.html
previews/PR15/library_management/: index.html
previews/PR15/search/: index.html
previews/PR15/spaces/: index.html
previews/PR15/views/: index.html
previews/PR16/: index.html  search_index.js
previews/PR16/MPI/: index.html
previews/PR16/calling_c/: index.html
previews/PR16/compilation/: index.html
previews/PR16/config_options/: index.html
previews/PR16/environment/: index.html
previews/PR16/inaccessible_views/: index.html
previews/PR16/interop/: index.html
previews/PR16/library_management/: index.html
previews/PR16/search/: index.html
previews/PR16/spaces/: index.html
previews/PR17/: index.html
previews/PR19/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR2/: index.html  search_index.js
previews/PR21/: .documenter-siteinfo.json  index.html
previews/PR3/: index.html
previews/PR4/: index.html
previews/PR6/: index.html
previews/PR7/: index.html  search_index.js
previews/PR8/: index.html
previews/PR9/: index.html  search_index.js
src/: Kokkos.jl  build_progress_bar.jl  configuration.jl  dynamic_build.jl  dynamic_compilation.jl  kokkos_lib.jl  kokkos_project.jl  kokkos_wrapper.jl  layouts.jl  spaces.jl  utils.jl  views.jl  weak_view_dict.jl
test/: Project.toml  misc.jl  mpi.jl  mpi_tests.jl  pre_wrapper_load.jl  projects.jl  runtests.jl  simple_lib_tests.jl  spaces.jl  utils.jl  views.jl  views_gpu.jl
test/backends/: cuda.jl  hip.jl
test/lib/simple_lib/: CMakeLists.txt  simple_lib_1D.cpp  simple_lib_2D.cpp
(+101 files in other folders)
